게시판 수정(완료 버튼)

--- a/css/board.css
+++ b/css/board.css
@@ -23,7 +23,8 @@
 		margin-bottom: 10%;
 		background: #333f50;
 		border: solid 1px#333f50;
-		border-radius: 12px;}
+		border-radius: 12px;
+		z-index: 999;}
 /* 게시판 목록보기(board_list.php) */
 #board_list li { padding: 10px 0; border-bottom: solid 1px #dddddd; }
 #board_list span { display: inline-block; text-align: center;}
